<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TwAPIme</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="ok">OK</string>
    <string name="invalid_credentials">Invalid credentials.</string>
    <string name="signing_in_wait">Signing in. Please wait...</string>
    <string name="rate_limit_exceeded">Your hourly access limit is exceeded.</string>
    <string name="network_access_failure">It was not possible to access the network. Check your internet connection.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="home">Home</string>
    <string name="mentions">Mentions</string>
    <string name="direct_message">DM</string>
    <string name="lists">Lists</string>
    <string name="refreshing_wait">Refreshing. Please wait...</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">mins</string>
    <string name="minutes">mins</string>
    <string name="second">sec</string>
    <string name="seconds">secs</string>
    <string name="refresh">Refresh</string>
    <string name="message">Message</string>
    <string name="sign_out">Sign Out</string>
    <string name="about">About</string>
    <string name="my_profile">My Profile</string>
    <string name="post">Post</string>
    <string name="posting_wait">Posting. Please wait...</string>
    <string name="confirm_sign_out">Are you sure you want to sign out?</string>
    <string name="confirm_report_spam">Are you sure you want to report this user as spammer?</string>
    <string name="retweet">Retweet</string>
    <string name="retweeting_wait">Retweeting. Please wait...</string>
    <string name="comment">Comment</string>
    <string name="send">Send</string>
    <string name="sending_dm_wait">Sending. Please wait...</string>
    <string name="new_dm">New DM</string>
    <string name="new_tweet">New Tweet</string>
    <string name="recipient">Recipient</string>
    <string name="reply">Reply</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="favoriting_wait">Favoriting. Please wait...</string>
    <string name="unfavoriting_wait">Unfavoriting. Please wait...</string>
    <string name="members">Members</string>
    <string name="tweets">Tweets</string>
    <string name="bio">Bio</string>
    <string name="web">Web</string>
    <string name="friends">Friends</string>
    <string name="followers">Followers</string>
    <string name="member_since">Member Since</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="profile">Profile</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="report_spam">Report Spam</string>
    <string name="following_wait">Following. Please wait...</string>
    <string name="unfollowing_wait">Unfollowing. Please wait...</string>
    <string name="reporting_spam_wait">Reporting. Please wait...</string>
    <string name="blocking_wait">Blocking. Please wait...</string>
    <string name="unblocking_wait">Unblocking. Please wait...</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for name or topic</string>
    <string name="users">Users</string>
    <string name="version">Version</string>
    <string name="support">Support</string>
    <string name="website">Website</string>
    <string name="app_website">http://www.twapime.com</string>
    <string name="app_twitter">twapime</string>
    <string name="app_description">TwAPIme for Android is an open source Twitter client app powered by Twitter API ME project. The idea behind this app is to provide to this project\'s developers, one more channel of learning. Developers will be able to see and learn how the API\'s features are implemented in a real and professional app. End users are also welcome to enjoy TwAPIme. Have fun!</string>
    <string name="app_email_feedback">feedback@twapime.com</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="done">Done</string>
    <string name="privacy">Privacy</string>
    <string name="cancel">Cancel</string>
    <string name="new_list">New List</string>
    <string-array name="privacy_array">
        <item>Private</item>
        <item>Public</item>
    </string-array>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="processing_wait">Processing. Please wait...</string>
    <string name="confirm_delete_list">Are you sure you want to delete this list?</string>
    <string name="sign_up">Sign Up</string>
    <string name="oauth_error_question">It was not possible to authenticate you. Would you like to try again?</string>
    <string name="oauth_deny_question">You have denied access to your account. Would you like to reconsider it?</string>
    <string name="exit_app">Exit App</string>
    <string name="loading_wait">Loading. Please wait...</string>
    <string name="location">Location</string>
    <string name="subscribers">Subscribers</string>
    <string name="try_again">Would you like to try again?</string>
    <string name="unknown_failure">There was an expected error.</string>
    <string name="retweeted_by">Retweeted by %1$s</string>
    <string name="in_reply_to">In reply to %1$s</string>
    <string name="following">Following</string>
    <string name="add_to_list">Add to List</string>
    <string name="remove">Remove</string>
    <string name="updating_wait">Updating. Please wait...</string>
    <string name="unsubscribing_wait">Unsubscribing. Please wait...</string>
    <string name="subscribing_wait">Subscribing. Please wait...</string>
    <string name="removing_wait">Removing. Please wait...</string>
    <string name="deleting_wait">Deleting. Please wait...</string>
    <string name="creating_wait">Creating. Please wait...</string>
    <string name="adding_wait">Adding. Please wait...</string>
    <string name="signing_out_wait">Signing out. Please wait...</string>
    <string name="feedback">Feedback</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_list">Edit List</string>
    <string name="tweet">Tweet</string>
    <string name="pick_list">Pick a List</string>
    <string name="pick_user">Pick a User</string>
    <string name="confirm_block">Are you sure you want to block this user?</string>
    <string name="confirm_unfollow">Are you sure you want to unfollow this user?</string>
</resources>
