<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/new_tweet" android:id="@+id/menu_item_new_tweet" android:icon="@drawable/chat"></item>
    <item android:title="@string/refresh" android:id="@+id/menu_item_refresh" android:icon="@drawable/refresh"></item>
    <item android:title="@string/search" android:id="@+id/menu_item_search" android:icon="@drawable/magnify"></item>
    <item android:title="@string/my_profile" android:id="@+id/menu_item_my_profile" android:icon="@drawable/user"></item>
    <item android:id="@+id/menu_item_about" android:icon="@drawable/info" android:title="@string/about"></item>
    <item android:id="@+id/menu_item_sign_out" android:icon="@drawable/onoff" android:title="@string/sign_out"></item>
</menu>
