<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
    <ScrollView android:id="@+id/scrollView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1">
        <LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:layout_height="fill_parent" android:orientation="vertical">
            <TextView android:layout_marginTop="4px" android:id="@+id/auth_txtv_hello" android:gravity="center" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:typeface="normal" android:layout_marginBottom="4px" android:text="@string/hello"></TextView>
            <TextView android:id="@+id/auth_txtv_username" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/username"></TextView>
            <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/auth_txtf_username"></EditText>
            <TextView android:id="@+id/auth_txtv_password" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password"></TextView>
            <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/auth_txtf_password" android:inputType="textPassword"></EditText>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:id="@+id/linearLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_vertical|center_horizontal">
        <Button android:text="@string/sign_in" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:id="@+id/auth_btn_sign_in" android:layout_weight="1"></Button>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/auth_btn_sign_up" android:text="@string/sign_up" android:layout_weight="1"></Button>
    </LinearLayout>
</LinearLayout>
