<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:orientation="vertical" android:layout_height="wrap_content" android:id="@+id/new_tweet">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/recipient" android:id="@+id/new_dm_txtv_recipient"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/new_dm_txtf_recipient"></EditText>
    <LinearLayout android:id="@+id/linearLayout2" android:layout_height="wrap_content" android:layout_width="fill_parent">
        <TextView android:text="@string/message" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1" android:id="@+id/new_dm_txtv_new_tweet"></TextView>
        <TextView android:text="0" android:layout_height="wrap_content" android:layout_width="wrap_content" android:gravity="right" android:id="@+id/new_dm_txtv_number_chars"></TextView>
    </LinearLayout>
    <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:maxLength="140" android:gravity="top" android:lines="5" android:id="@+id/new_dm_txtf_content"></EditText>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:gravity="center">
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/new_dm_btn_post" android:text="@string/send"></Button>
    </LinearLayout>
</LinearLayout>
