<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:orientation="vertical" android:id="@+id/new_tweet" android:layout_height="fill_parent">
    <ScrollView android:id="@+id/scrollView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1">
        <LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout3" android:layout_height="fill_parent" android:orientation="vertical">
            <LinearLayout android:id="@+id/linearLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@+id/new_tweet_txtv_new_tweet" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/message" style="@style/TwAPImeThemeFieldTitle"></TextView>
                <TextView android:id="@+id/new_tweet_txtv_number_chars" android:gravity="right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" style="@style/TwAPImeThemeFieldTitle"></TextView>
            </LinearLayout>
            <EditText android:maxLength="140" android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/new_tweet_txtf_content" android:gravity="top" android:lines="5"></EditText>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout1" style="@style/TwAPImeThemePanelButton">
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/new_tweet_btn_post" android:text="@string/post" android:layout_weight="1"></Button>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/new_tweet_btn_cancel" android:text="@string/cancel" android:layout_weight="1"></Button>
    </LinearLayout>
</LinearLayout>
